20000321-18:55 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/diskspac.c
     * add missing {

20000321-18:20 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/diskspac.c
     * Fix for borland's def of ULARGE_INTEGER

20000321-17:05 EST Paul Tucker <ptucker@sympatico.ca>
   * tests/Makefile
     + tests/tstdspac.prg

20000321-16:45 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/diskspac.c
     * Modified code since math wasn't working in '32 bit' mode
     * reworked to be consistant amongst platforms.
     + hb_DiskSpace() does the grunt work for all supported platforms
     * DiskSpace() calls hb_diskSpace()
   * source/tools/io.c
     * DiskFree(), DiskUsed, DiskFull() now call hb_DiskSpace()
   * include/hbapi.c
     + #define HB_DISK_....
     + declaration for hb_DiskSpace()
   ! Disk...() functions return a double.
   + tests/tstdspac.prg
     * tests for diskspace related functions

20000321-15:08 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rtl/diskspac.c
     + Supports larger disks than 2GB by design.
     + Support added for Win95B, Win98, WinNT, Win2K to return the correct
       free space for >2GB disks. (Wewwh, Win32 API *is* a strange beast ;)

   * source/rtl/seconds.c
     include/hbdate.h
     * hb_secondsToday() -> hb_seconds() Hack to avoid name collision removed.

   * include/hbdefs.h
     pp/pplib.c
     rtl/gtdos/gtdos.c
     rtl/gtos2/gtos2.c
     rtl/gtwin/gtwin.c
     rtl/ampm.c
     rtl/gtapi.c
     rtl/memoline.c
     rtl/round.c
     vm/arrayshb.c
     vm/fm.c
     * HB_MIN_() -> HB_MIN()
       HB_MAX_() -> HB_MAX()

20000321-12:32 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbdefs.h
     + HB_FUNCNAME() macro added for Harbour name mangling:
       HB_FUNCNAME( DTOC ) -> HB_DTOC
     * Changed the prefix for Harbour callable functions from "HB_" to
       "HB_FUN_" this way any possible collisions with internal symbols is