@@ -1,3 +1,8 @@
+20000321-19:58 EST Paul Tucker <ptucker@sympatico.ca>
+   * source/rtl/diskspac.c
+     * Borland does not see the unnamed struct that is part of ULARGE_INT.
+     * fix is to used the named version which MS conveniently supplied.
+
 20000321-18:55 EST Paul Tucker <ptucker@sympatico.ca>
    * source/rtl/diskspac.c
      * add missing {
